2006-09-25  fabian

    * Added an option to disable close tab button and tab number.
    * Fixed support for xterm's resize CSI sequence support.
    
2006-09-24  fabian

    * Fixed a bug is PTYSession that causes crashes when a tab is dragged across window.
    * Added support for xterm's iconify/deiconify escape sequences.
    * Added support for xterm's window position escape sequences.
    
2006-9-23   fabian 

    * Re-implemented missing PseudoTerminal methods for Applescript.
    
2006-9-21   fabian

    * Fixed another bug that makes program crash when one clicks close tab button too fast.
    * Fixed a bug that causes incorrect tab status reports.
    * Fixed a bug that happens when one clears scrollback buffer.
    * Changed the version to 0.9.0 pre-release
    * Fixed a timing bug in [PTYSession updateDisplay]
    * Fixed a display bug when one searches for a string in scrollback buffer.
    * Fixed Cmd-Click to open URL
    
2006-9-20   fabian

    * Cleaned the code. Removed ITSessionMgr class. Improved stability.
    * Made "close session" warning dialog available upon clicking the close button.
    * Fixed a bug in Growl that causes crashes.
    
2006-9-18   fabian

    * Added UI for allowing users to adjust the display refreshing rate.
    * Added supprot for dragging a window's only tab to join another window.
    * Changed tab ordering behavior. Now the tabs are no longer sorted by the order of their creation.
    * Fixed wrong bookmark draw bug.
        
2006-9-16   fabian

    * Fixed another resize bug
    * Fixed a scrolling bug
    * Added support for escape codes that changes window size (Crashes in the vttest's xterm resizing
      test because of the fast resizing request).
    
2006-9-15   fabian

    * Fixed the close button not working bug.
    * Fixed the wrong tab location after resizing bug.
    * Added support for dragging a tab outside of a window to create a new window.
    * Now allows tab size to be changed dynamically.
    